places/static/places/css/map_widgets.css
/*
 * Extracted from django-map-widgets v0.5.1 (https://github.com/erdem/django-map-widgets)
 * Changes applied:
 *   - Added .mw-header .mw-adress-input-wrap gmp-place-autocomplete rule to size
 *     the PlaceAutocompleteElement web component within its container.
 *   - Colors aligned to site design tokens (_variables.scss): focus ring and
 *     interactive colors use dp-violet-300 (#0d00a4); grays use gray-900/700/600;
 *     default button background uses dp-orange-50 (#fbf8f2).
 */

@font-face {
    font-family: 'fontello';
    src: url('../font/fontello.eot?93477804');
    src: url('../font/fontello.eot?93477804#iefix') format('embedded-opentype'),
    url('../font/fontello.woff2?93477804') format('woff2'),
    url('../font/fontello.woff?93477804') format('woff'),
    url('../font/fontello.ttf?93477804') format('truetype'),
    url('../font/fontello.svg?93477804#fontello') format('svg');
    font-weight: normal;
    font-style: normal;
}

.mw-wrap input:focus {
    outline: 0;
}

.mw-wrap [class^="icon-"]::before, .mw-wrap [class*=" icon-"]::before {
    font-family: "fontello";
    font-style: normal;
    font-weight: normal;
    speak: never;

    display: inline-block;
    text-decoration: inherit;
    width: 1em;
    margin-right: .2em;
    text-align: center;

    font-variant: normal;
    text-transform: none;

    line-height: 1em;

    margin-left: .2em;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.mw-wrap .icon-location::before {
    content: '\e800';
}

.mw-wrap .icon-down-dir::before {
    content: '\e801';
}

.mw-wrap .icon-trash-empty::before {
    content: '\e802';
}

.mw-wrap .icon-down-open::before {
    content: '\e803';
}

.mw-wrap .icon-up-open::before {
    content: '\e804';
}

.mw-wrap .icon-up-dir::before {
    content: '\e805';
}

.mw-wrap .icon-direction::before {
    content: '\f124';
}

.mw-wrap {
    font-family: Geist, sans-serif;
    width: 80%;
    min-width: 500px;
    margin-bottom: 10px;
    display: block;
    overflow: hidden;
}

.tabular td .mw-wrap {
    width: 100%;
}

.mw-wrap .form-control, .mw-wrap .mapboxgl-ctrl-geocoder--input {
    border: 1px solid #ccc;
    font-family: inherit;
    margin: 0;
    box-sizing: border-box;
    display: block;
    width: 100%;
    height: 33px;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #5a5a5a;
    background-color: #fff;
    background-image: none;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
}

@media screen and (min-width: 640px) {
    .mw-wrap .mapboxgl-ctrl-geocoder {
        width: 100%;
        max-width: 100%;
    }
}

@media screen and (max-width: 1024px) {
    .mw-wrap .button-text {
        display: none;
    }
}

.mw-wrap .mapboxgl-ctrl-geocoder--icon {
    display: none;
}

.mw-wrap .mapboxgl-ctrl-geocoder {
    z-index: 10;
}

.mw-wrap .form-control:focus {
    border-color: #0d00a4;
    outline: 0;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(13, 0, 164, .2);
}

.mw-header {
    margin-bottom: 6px;
}

.mw-header .mw-adress-input-wrap {
    width: 35%;
}

.mw-header .mw-adress-input-wrap gmp-place-autocomplete {
    display: block;
    width: 100%;
}

.mw-header .mw-coordinates-wrap {
    position: relative;
    display: inline-block;
}

.mw-coordinates-overlay {
    width: 180px;
    background: #ededed;
    margin-top: 3px;
    position: absolute;
    z-index: 10000;
    padding: 10px;
    box-shadow: 0 6px 20px rgba(0, 0, 0, .325);
}

.mw-coordinates-overlay label {
    float: none;
    width: 100%;
    height: 60px;
    font-weight: 500;
    color: #3c3c3c;
    overflow: hidden;
}

.mw-coordinates-overlay input.form-control.error {
    border-color: #a94442;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
}

.mw-coordinates-overlay input.error:focus {
    border-color: #843534;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
}

.mw-header .mw-coordinates-container label {
    cursor: pointer;
}

.mw-map {
    height: 360px;
    display: block;
}

.mw-footer {
    padding: 10px 0;
}

.mw-map-wrapper {
    height: 360px;
    position: relative;
}

.mw-loader {
    background: url("../images/ripple.gif") no-repeat center center;
    background-size: cover;
    width: 64px;
    height: 64px;
    position: absolute;
    left: 50%;
    top: 50%;
    margin: -32px 0 0 -32px;
}

.mw-loader-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 99999;
    background: rgba(255, 255, 255, .7);
    text-align: center;
}

.mw-map.click, .mw-map.click div {
    cursor: crosshair;
}

.mw-map.click div.gmnoprint div {
    cursor: pointer;
}

.mw-help-text.help-text {
    font-size: 11px;
    color: #5a5a5a;
}

.mw-btn {
    display: inline-block;
    margin-bottom: 0;
    font-weight: normal;
    text-align: center;
    vertical-align: middle;
    touch-action: manipulation;
    cursor: pointer;
    background-image: none;
    border: 1px solid transparent;
    white-space: nowrap;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    user-select: none;
    text-decoration: none;
}

.mw-btn:focus,
.mw-btn:active:focus,
.mw-btn.active:focus,
.mw-btn.focus,
.mw-btn:active.focus,
.mw-btn.active.focus {
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px;
}

.mw-btn:hover,
.mw-btn:focus,
.mw-btn.focus {
    color: #222222;
    text-decoration: none;
}

.mw-btn:active,
.mw-btn.active {
    outline: 0;
    background-image: none;
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}

.mw-btn.disabled,
.mw-btn[disabled],
fieldset[disabled] .mw-btn {
    cursor: not-allowed;
    opacity: 0.65;
    box-shadow: none;
}

a.mw-btn.disabled,
fieldset[disabled] a.mw-btn {
    pointer-events: none;
}
/* ... */

